--- a/.github/workflows/win-fortran.yml
+++ b/.github/workflows/win-fortran.yml
@@ -1,4 +1,4 @@
-name: win setup-fortran
+name: win modflowpy/install-intelfortran-action
 
 on:
   push:
@@ -22,12 +22,14 @@ jobs:
         run: |
           cmd /c 'C:\Program Files (x86)\Intel\oneAPI\compiler\2022.2.0\env\vars.bat'
           dir 'C:\Program Files (x86)\Intel\oneAPI\compiler\2022.2.0\windows\bin\'
-          set CC icx.exe
+          set CC icx
           set FC ifx
           set CPP icpx
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
+          rm 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.35.32215\bin\HostX64\x64\cl.exe'
           cmake -B build  -DCMAKE_C_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2022.2.0\\windows\\bin\\icx.exe" -DCMAKE_CXX_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2022.2.0\\windows\\bin\\icx.exe" -DCMAKE_Fortran_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2022.2.0\\windows\\bin\\ifx.exe" -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON
+          cat build\CMakeCache.txt
           # cmake -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DCMAKE_Fortran_COMPILER=ifx -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON -B build 
           cmake --build build --config Release
           # cd build && ctest -C Release -VV
