--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -1,4 +1,4 @@
-name: win awvwgk/setup-fortran
+name: MinGW
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - name: Install Intel OneAPI
+      - name: Install gfortran
         uses: awvwgk/setup-fortran@v1
       - name: Install MPI
         uses: mpi4py/setup-mpi@v1
