--- a/.github/workflows/win-fortran.yml
+++ b/.github/workflows/win-fortran.yml
@@ -28,7 +28,7 @@ jobs:
           set CPP icpx
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
-          rm 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.35.32215\bin\HostX64\x64\cl.exe'
+          # rm 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.35.32215\bin\HostX64\x64\cl.exe'
           cmake -B build  -DCMAKE_C_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2022.2.0\\windows\\bin\\icx.exe" -DCMAKE_CXX_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2022.2.0\\windows\\bin\\icx.exe" -DCMAKE_Fortran_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2022.2.0\\windows\\bin\\ifx.exe" -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON
           cat build\CMakeCache.txt
           # cmake -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DCMAKE_Fortran_COMPILER=ifx -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON -B build 
