--- a/.github/workflows/win-setup.yml
+++ b/.github/workflows/win-setup.yml
@@ -1,4 +1,4 @@
-name: win awvwgk/setup-fortran intel
+name: windows Intel oneAPI
 
 on:
   push:
@@ -9,6 +9,7 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
+      - uses: lukka/get-cmake@latest    
       - name: Install Intel OneAPI
         uses: awvwgk/setup-fortran@main
         with:
@@ -18,3 +19,21 @@ jobs:
         uses: mpi4py/setup-mpi@v1
         with:
           mpi: intelmpi
+      - name: Test HDF5
+        env:
+          CC: icx
+          CPP: icpx
+          FC: ifx
+        run: |
+          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\env\vars.bat'
+          dir 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\windows\bin\'
+          set CC icx
+          set FC ifx
+          set CPP icpx
+          git clone https://github.com/HDFGroup/hdf5.git
+          cd hdf5
+          cmake -B build  -DCMAKE_C_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2023.2.0\\windows\\bin\\icx.exe" -DCMAKE_CXX_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2023.2.0\\windows\\bin\\icx.exe" -DCMAKE_Fortran_COMPILER="C:\\Program Files (x86)\\Intel\\oneAPI\\compiler\\2023.2.0\\windows\\bin\\ifx.exe" -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON
+          cat build\CMakeCache.txt
+          # cmake -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DCMAKE_Fortran_COMPILER=ifx -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON -B build 
+          cmake --build build --config Release
+      
