--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -21,7 +21,9 @@ jobs:
           cd hdf5
           echo "CXX=gcc.exe" >> $GITHUB_ENV
           cmake -B build
+          cat build\CMakeCache.txt          
           # cmake -B build -DCMAKE_C_COMPILER="C:\ProgramData\chocolatey\bin\gcc.exe"
           # cmake -B build -DCMAKE_Fortran_COMPILER="C:\ProgramData\chocolatey\bin\gfortran.exe" -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON
           cmake --build build --config Release
+          cat build\CMakeCache.txt          
           cd build && ctest -C Release -VV
