--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -24,6 +24,6 @@ jobs:
           cat build\CMakeCache.txt          
           # cmake -B build -DCMAKE_C_COMPILER="C:\ProgramData\chocolatey\bin\gcc.exe"
           # cmake -B build -DCMAKE_Fortran_COMPILER="C:\ProgramData\chocolatey\bin\gfortran.exe" -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON
-          cmake --build build --config Release
+          cmake --build build --config Release -G Ninja
           cat build\CMakeCache.txt          
           cd build && ctest -C Release -VV
