--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -20,10 +20,9 @@ jobs:
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
           echo "CXX=gcc.exe" >> $GITHUB_ENV
-          cmake -B build
+          cmake -B build -G Ninja
           cat build\CMakeCache.txt          
           # cmake -B build -DCMAKE_C_COMPILER="C:\ProgramData\chocolatey\bin\gcc.exe"
           # cmake -B build -DCMAKE_Fortran_COMPILER="C:\ProgramData\chocolatey\bin\gfortran.exe" -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON
-          cmake --build build --config Release -G Ninja
-          cat build\CMakeCache.txt          
+          cmake --build build --config Release
           cd build && ctest -C Release -VV
