--- a/.github/workflows/win-setup.yml
+++ b/.github/workflows/win-setup.yml
@@ -39,4 +39,4 @@ jobs:
           cmake --preset="ci-Intel" -B build -G Ninja
           cat build\CMakeCache.txt
           # cmake -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DCMAKE_Fortran_COMPILER=ifx -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON -B build 
-          cmake --preset="ci-Intel" --build build
+          cmake --build build
