--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -23,7 +23,7 @@ jobs:
           # cmake -B build -G Ninja
 
           # cmake -B build -DCMAKE_C_COMPILER="C:\ProgramData\chocolatey\bin\gcc.exe"
-          cmake -G Ninja -B build -DCMAKE_Fortran_COMPILER="C:\ProgramData\chocolatey\bin\gfortran.exe" -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_BUILD_FORTRAN:BOOL=ON
+          cmake -G Ninja -B build -DCMAKE_Fortran_COMPILER="C:\ProgramData\chocolatey\bin\gfortran.exe" -DHDF5_BUILD_FORTRAN:BOOL=ON
           cat build\CMakeCache.txt          	  	  
           cmake --build build --config Release
           cd build && ctest -C Release -VV
