--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -8,15 +8,14 @@ on:
 jobs:
   install:
     runs-on: windows-latest
-    defaults:
-      run:
-        shell: bash -l {0}    
+#    defaults:
+#      run:
+#        shell: bash -el {0}    
     steps:
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: anaconda-client-env
-          environment-file: etc/example-environment.yml
-          auto-activate-base: false    
+          miniconda-version: "latest"
+          activate-environment: foo
       - name: Install Intel® oneAPI Threading Building Blocks (oneTBB).
         run: conda install -c intel tbb-devel.
       - name: Install Intel® oneAPI DPC++/C++ Compiler.
