--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -20,4 +20,13 @@ jobs:
         run: conda install -c intel tbb-devel
       - name: Install Intel® oneAPI DPC++/C++ Compiler.
         run: conda install -c intel dpcpp-cpp-rt
+      - name: Install Intel Fortran
+        run: conda install -c intel intel-fortran-rt
+      - name: Test HDF5
+        run: |
+          git clone https://github.com/hyoklee/hdf5.git
+          cd hdf5
+          cmake --preset="ci-Intel" -B build -G Ninja -DHDF5_BUILD_FORTRAN:BOOL=ON 
+          cat build\CMakeCache.txt
+          cmake --build build
         
