--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -24,9 +24,9 @@ jobs:
         run: conda install -c intel intel-fortran-rt
       - name: Test HDF5
         run: |
-          ls /c/Miniconda3/envs/foo/Library/bin
-          echo $PATH
-          find /c/Miniconda3 -name 'icx.exe'
+          find /c/Miniconda3
+#          ls /c/Miniconda3/envs/foo/Library/bin
+#          echo $PATHw          
 #          git clone https://github.com/hyoklee/hdf5.git
 #          cd hdf5
 #          cmake --preset="ci-Intel" -B build -G Ninja -DHDF5_BUILD_FORTRAN:BOOL=ON 
