--- a/.github/workflows/linux-icx.yml
+++ b/.github/workflows/linux-icx.yml
@@ -25,7 +25,9 @@ jobs:
           sudo apt install -y intel-oneapi-mpi-devel
           sudo apt install -y intel-oneapi-mkl-devel          
           source /opt/intel/oneapi/setvars.sh
+          export PATH=$PATH:$HOME/intel/oneapi/compiler/latest/linux/bin
           ls /opt/intel/oneapi/mpi/
+          ls $HOME/intel/oneapi/compiler/latest/linux/bin
           which icx
           which mpicc
           
