--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -30,6 +30,6 @@ jobs:
         run: |
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
-          cmake -B build
+          cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF
           cat build\CMakeCache.txt
           cmake --build build
