--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -27,6 +27,7 @@ jobs:
         env:
           FC: nvfortran
           CC: nvcc
+          CFLAGS: -std=c++11
         run: |
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
