--- a/.github/workflows/nvidia2.yml
+++ b/.github/workflows/nvidia2.yml
@@ -32,7 +32,7 @@ jobs:
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
           ./autogen.sh
-          ./configure CC=nvcc FC=nvfortran FCLAGS='-fPIC' --enable-fortran --enable-shared
+          ./configure CC=nvcc FC=nvfortran FCFLAGS='-fPIC' --enable-fortran --enable-shared
           cat config.log
           make -j
           make check -j
