--- a/.github/workflows/nvidia2.yml
+++ b/.github/workflows/nvidia2.yml
@@ -32,8 +32,11 @@ jobs:
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
           ./autogen.sh
-          ./configure CC=nvcc FC=nvfortran FCFLAGS='-fPIC' --enable-fortran --enable-shared
+          ./configure CC="$(which nvcc)" FC="$(which nvfortran)" FCFLAGS='-fPIC' --enable-fortran --enable-shared
           cat config.log
           make -j
           make check -j
+          sudo make install
+          sudo make uninstall
+          
           
