--- a/.github/workflows/aocc.yml
+++ b/.github/workflows/aocc.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install System dependencies
         run: |
           sudo apt update
-          sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential libncurses-dev libquadmath0 libstdc++6 libxml2      
+          sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential libncurses-dev libquadmath0 libstdc++6 libxml2 openmpi-bin openmpi-common mpi-default-dev
           wget https://download.amd.com/developer/eula/aocc/aocc-4-1/aocc-compiler-4.1.0.tar
           tar -xvf aocc-compiler-4.1.0.tar
           cd aocc-compiler-4.1.0
@@ -30,7 +30,8 @@ jobs:
           export OMPI_FC=flang
           export OMPI_CXX=clang++
           git clone https://github.com/HDFGroup/hdf5.git
-          cd hdf5          
+          cd hdf5
+          ./autogen.sh
           ./configure  --enable-parallel --enable-fortran --enable-shared --enable-static
           cat config.log
           
