--- a/.github/workflows/linux-icx.yml
+++ b/.github/workflows/linux-icx.yml
@@ -1,9 +1,9 @@
-name: linux autotools icx
+name: linux icx
 
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,12 +33,35 @@ jobs:
           
       - name: Install HDF5
         run: |
-          wget https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.14/hdf5-1.14.0/src/hdf5-1.14.0.tar.gz
           source /opt/intel/oneapi/setvars.sh
           export SYCL_DEVICE_FILTER=opencl.cpu
-          tar zxvf hdf5-1.14.0.tar.gz
-          cd hdf5-1.14.0
-          ./configure CC=/opt/intel/oneapi/compiler/2023.2.1/linux/bin/icx CXX=dpcpp --prefix=/usr/local
-          make
-          make check
-          sudo make install
+          export PATH=$PATH:/opt/intel/oneapi/mpi/2021.10.0/bin:/opt/intel/oneapi/compiler/2023.2.1/linux/bin
+          git clone https://github.com/hyoklee/hdf5.git
+          cd hdf5          
+          cmake -S . -B build \
+          -DCMAKE_BUILD_TYPE="RelWithDebInfo" \
+          -DCMAKE_INSTALL_PREFIX=install \
+          -DHDF5_BUILD_FORTRAN=ON \
+          -DHDF5_ENABLE_PARALLEL=ON \
+          -DHDF5_BUILD_HL_LIB=ON \
+          -DCMAKE_CXX_COMPILER=dpcpp \
+          -DCMAKE_C_COMPILER=icx \
+          -DCMAKE_Fortran_COMPILER=ifx \
+          -DMKL_ROOT="/opt/intel/oneapi/mkl/latest" \
+          -DTBB_ROOT="/opt/intel/oneapi/tbb/latest" \
+          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF
+
+      - name: build
+        shell: bash
+        run: |
+          source /opt/intel/oneapi/setvars.sh
+          export PATH=$PATH:/opt/intel/oneapi/mpi/2021.10.0/bin:/opt/intel/oneapi/compiler/2023.2.1/linux/bin          
+          cmake --build build
+
+      - name: test
+        shell: bash
+        run: |
+          source /opt/intel/oneapi/setvars.sh
+          export PATH=$PATH:/opt/intel/oneapi/mpi/2021.10.0/bin:/opt/intel/oneapi/compiler/2023.2.1/linux/bin          
+          export SYCL_DEVICE_FILTER=opencl.cpu
+          ctest --test-dir build --output-on-failure          
