--- a/.github/workflows/aocc2.yml
+++ b/.github/workflows/aocc2.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install System dependencies
         run: |
           sudo apt update
-          sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential libncurses-dev libquadmath0 libstdc++6 libxml2 openmpi-bin openmpi-common mpi-default-dev
+          sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential libncurses-dev libquadmath0 libstdc++6 libxml2
           wget https://download.amd.com/developer/eula/aocc/aocc-4-1/aocc-compiler-4.1.0.tar
           tar -xvf aocc-compiler-4.1.0.tar
           cd aocc-compiler-4.1.0
@@ -29,12 +29,20 @@ jobs:
           # export OMPI_CC=clang
           # export OMPI_FC=flang
           # export OMPI_CXX=clang++
-          export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-4.1.0/lib
+          export LD_LIBRARY_PATH=/home/runner/work/actions/actions/aocc-compiler-4.1.0/lib:/usr/local/lib
+          wget https://download.open-mpi.org/release/open-mpi/v4.1/openmpi-4.1.5.tar.gz
+          tar zxvf openmpi-4.1.5.tar.gz
+          cd openmpi-4.1.5
+          ./configure CC=clang FC=flang --prefix=/usr/local
+          make
+          sudo make install
+          export PATH=/usr/local/bin:$PATH
+          cd ..
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
           ./autogen.sh
           # ./configure  --enable-parallel --enable-fortran --enable-shared  CXX="$(which mpic++) -cc=$(which clang++)" CC="$(which mpicc) -cc=$(which clang)" FC="$(which mpif90) -fc=$(which flang)" LDFLAGS="-L/home/runner/work/actions/actions/aocc-compiler-4.1.0/lib -L/home/runner/work/actions/actions/aocc-compiler-4.1.0/lib32 -L../src/.libs/"
-          ./configure  --enable-parallel --enable-fortran --enable-shared
+          ./configure  --enable-parallel --enable-fortran --enable-shared CC=clang FC=flang
           # LDFLAGS="-L/home/runner/work/actions/actions/aocc-compiler-4.1.0/lib"
           cat config.log
           make -j
