--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -3,7 +3,7 @@ name: NVIDIA
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -29,13 +29,10 @@ jobs:
           CC: nvcc
           CFLAGS: -std=c++11
           CXXFLAGS: -std=c++11
+          FCFLAGS: -fPIC
         run: |
-          git clone https://github.com/hyoklee/hdf5.git
+          git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
-          # cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF
-          # cmake --build build
-          ./autogen.sh
-          ./configure CC=nvcc
-          make -j
-          make check -j
+          cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF
+          cmake --build build
           
