--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -27,12 +27,12 @@ jobs:
         env:
           FC: nvfortran
           CC: nvcc
-          CFLAGS: -std=c++11
-          CXXFLAGS: -std=c++11
+          CFLAGS: --std=c++11
+          CXXFLAGS: --std=c++11
           FCFLAGS: -fPIC
         run: |
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
-          cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF
+          cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF
           cmake --build build
           
