--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -27,10 +27,11 @@ jobs:
         env:
           FC: nvfortran
           CC: nvcc
+          CFLAGS: -ansi
           FCFLAGS: -fPIC
         run: |
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
-          cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF
+          cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DCMAKE_CXX_COMPILER_ID=NVHPC
           cmake --build build
           
