--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           FC: nvfortran
           CC: nvcc
-          CFLAGS: -ansi
+          CFLAGS: -std c++03
           FCFLAGS: -fPIC
         run: |
           git clone https://github.com/HDFGroup/hdf5.git
