--- a/.github/workflows/nvidia3.yml
+++ b/.github/workflows/nvidia3.yml
@@ -13,16 +13,17 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential
-          sudo apt-cache depends nvhpc
-          sudo apt-get install -y $(apt-cache depends nvhpc)
-          wget https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64/nvhpc_23.7_amd64.deb
-          sudo apt install -y ./nvhpc_23.7_amd64.deb
+          curl https://developer.download.nvidia.com/hpc-sdk/ubuntu/DEB-GPG-KEY-NVIDIA-HPC-SDK | sudo gpg --dearmor -o /usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg
+          echo 'deb [signed-by=/usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg] https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64 /' | sudo tee /etc/apt/sources.list.d/nvhpc.list
+          sudo apt-get update -y
+          sudo apt-get install -y nvhpc-23-7
 
       - name: Check version
         run: |
           echo "Installed cuda version is: ${{steps.cuda-toolkit.outputs.cuda}}"
           echo "cuda location: ${{steps.cuda-toolkit.outputs.CUDA_PATH}}"
           nvcc -V
+          
       - name: Test HDF5
         env:
           FC: nvfortran
@@ -34,5 +35,5 @@ jobs:
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
           cmake -B build -DHDF5_BUILD_FORTRAN:BOOL=ON 
-          cat build\CMakeCache.txt
+          cat build/CMakeCache.txt
           cmake --build build
