ci: use my fork

--- a/.github/workflows/nvidia3.yml
+++ b/.github/workflows/nvidia3.yml
@@ -37,7 +37,7 @@ jobs:
           export NVHPC_CUDA_HOME=/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/cuda/12.2
           export LD_LIBRARY_PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/cuda/12.2/lib64:/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/compilers/lib
           export PATH=$PATH:/opt/nvidia/hpc_sdk/Linux_x86_64/23.7/compilers/bin:$NVHPC_CUDA_HOME/bin          
-          git clone https://github.com/HDFGroup/hdf5.git
+          git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
           cmake -B build  -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF
           # -DHDF5_BUILD_FORTRAN:BOOL=ON 
