--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -3,7 +3,7 @@ name: NVIDIA
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -26,13 +26,12 @@ jobs:
       - name: Test HDF5
         env:
           FC: nvfortran
-          CC: nvcc
+          CC: nvc
         run: |
-          export CFLAGS='-std=c++11'
-          export NVFLAGS='-std=c++11'
-          export FCLAGS='-fPIC'
+          export FCLAGS=-fPIC
           git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
-          cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DCMAKE_CXX_COMPILER_ID=NVHPC
+          cmake -B build -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF 
           cmake --build build
+          ctest --test-dir build --output-on-failure          
           
