ci: nvidia autotools parallel

--- a/.github/workflows/nvidia2.yml
+++ b/.github/workflows/nvidia2.yml
@@ -3,7 +3,7 @@ name: NVIDIA nvfortran
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
       - name: Install System dependencies
         run: |
           sudo apt update
-          sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential
+          sudo apt install -y libaec-dev zlib1g-dev automake autoconf libcurl4-openssl-dev libjpeg-dev wget curl bzip2 m4 flex bison cmake libzip-dev doxygen openssl libtool libtool-bin build-essential libopenmpi-dev libpthread-stubs0-dev
           curl https://developer.download.nvidia.com/hpc-sdk/ubuntu/DEB-GPG-KEY-NVIDIA-HPC-SDK | sudo gpg --dearmor -o /usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg
           echo 'deb [signed-by=/usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg] https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64 /' | sudo tee /etc/apt/sources.list.d/nvhpc.list
           sudo apt-get update -y
@@ -32,7 +32,7 @@ jobs:
           git clone https://github.com/hyoklee/hdf5.git
           cd hdf5
           ./autogen.sh
-          ./configure CC="$(which nvcc)" FC="$(which nvfortran)" FCFLAGS='-fPIC' --enable-fortran --enable-shared
+          ./configure CC="$(which nvcc)" FC="$(which nvfortran)" FCFLAGS='-fPIC' --enable-fortran --enable-shared --enable-parallel
           cat config.log
           make -j
           make check -j
